--- a/index.html
+++ b/index.html
@@ -58,6 +58,20 @@
     id="btn1" 
     value="Set Header">
 
+    <input type="button" 
+    onclick="var result = new Array(); var iresult = new Array(); for(var i=0;i<8;i++){ iresult.push('Data_' + i + '\nLine 2')}; for(var i=0;i<10;i++){result.push(iresult)}; DG.SetGridRowsJSON(JSON.stringify(result));" id="btn2" value="Set Some Data">
+
+
+    <input type="button" 
+        onclick="DG.SetAlternateRowColoring(true);" 
+    id="btn3" 
+    value="Set Alternate Coloring">
+
+    <input type="button" 
+        onclick="DG.SetAlternateRowColoring(false);" 
+    id="btn4" 
+    value="Clear Alternate Coloring">
+    
     <!--
 
     <input type="button" onclick="SP.SetBackgroundColor('#ff9999')" id="btn2" value="Red Background">
