Added some new features
Added Awareness of new settings to the custom CSS for 
--OutlineOn
--OutlineColor
--AlternateCellBackColor
--AlternateRowColoring
 and some omitted ones
--TitleVisible
--GridHeaderVisible

Added set methods for
SetGridOutline(boolean)
SetGridOutlineColor(string)
SetTitleVisible(boolean)
SetHeaderVisible(boolean)

--- a/index.html
+++ b/index.html
@@ -71,6 +71,22 @@
         onclick="DG.SetAlternateRowColoring(false);" 
     id="btn4" 
     value="Clear Alternate Coloring">
+
+    <input type="button" 
+    onclick="DG.SetTitleVisible(true);" 
+    id="btn5" value="Show Title">
+
+    <input type="button" 
+    onclick="DG.SetTitleVisible(false);" 
+    id="btn6" value="hide Title">
+
+    <input type="button" 
+    onclick="DG.SetHeaderVisible(true);" 
+    id="btn7" value="Show Header">
+
+    <input type="button" 
+    onclick="DG.SetHeaderVisible(false);" 
+    id="btn8" value="hide Header">
     
     <!--
 
