Implements WebService Populators
Implemented 

PopulateFromJSONUrl(DukeOfURL: string)

Will do an HTTP Get from DukeOfURL
Assumes the JSON formatted data returned with two elements
Header and Data
So for example
{
  "Header": 
     [ "Column 1", "Column 2", "Column 3", "Column 4", "Column 5", "Column 6", "Column 7", "Column 8", "Column 9", "Column 10" ],
  "Data": 
     [
      [ "Value 1","Value 2","Value 3","Value 4","Value 5","Value 6","Value 7","Value 8","Value 9","Value 10" ],
      [ "Value 1","Value 2","Value 3","Value 4","Value 5","Value 6","Value 7","Value 8","Value 9","Value 10" ]
     ]
  }

The Index.html test page has a button wired on it that touches a public webservice exposed on a sample data file for your testing

--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
     onclick="DG.SetHeaderVisible(false);" 
     id="btn8" value="hide Header">
     
+    <input type="button" 
+    onclick="DG.PopulateFromJSONUrl('https://my-json-server.typicode.com/Harlock123/JSONData/db');" 
+    id="btn9" value="Fetch Data From URL">
     <!--
 
     <input type="button" onclick="SP.SetBackgroundColor('#ff9999')" id="btn2" value="Red Background">
