Added some new custom properties
Strapped new properties into the TEST Index.html page... as a demo
added more data to the default data in the test grid...

--- a/index.html
+++ b/index.html
@@ -24,12 +24,23 @@
                     ['Data 1','Data 2','Data 3','Data 4','Date 5','Data 6','Data 7','Data 8'],
                     ['Data 1','Data 2','Data 3','Data 4','Date 5','Data 6','Data 7','Data 8'],
                     ['Data 1','Data 2','Data 3','Data 4','Date 5','Data 6','Data 7','Data 8'],
+                    ['Data 1','Data 2','Data 3','Data 4','Date 5','Data 6','Data 7','Data 8'],
+                    ['Data 1','Data 2','Data 3','Data 4','Date 5','Data 6','Data 7','Data 8'],
+                    ['Data 1','Data 2','Data 3','Data 4','Date 5','Data 6','Data 7','Data 8'],
+                    ['Data 1','Data 2','Data 3','Data 4','Date 5','Data 6','Data 7','Data 8'],
+                    ['Data 1','Data 2','Data 3','Data 4','Date 5','Data 6','Data 7','Data 8'],
+                    ['Data 1','Data 2','Data 3','Data 4','Date 5','Data 6','Data 7','Data 8'],
+                    ['Data 1','Data 2','Data 3','Data 4','Date 5','Data 6','Data 7','Data 8'],
+                    ['Data 1','Data 2','Data 3','Data 4','Date 5','Data 6','Data 7','Data 8'],
+                    ['Data 1','Data 2','Data 3','Data 4','Date 5','Data 6','Data 7','Data 8'],
+                    ['Data 1','Data 2','Data 3','Data 4','Date 5','Data 6','Data 7','Data 8'],
                     ['Data 1','Data 2','Data 3','Data 4','Date 5','Data 6','Data 7','Data 8']
                     ];
                     --CellFont: 12pt Courier;
                     --CellBackColor: White;
                     --CellForeColor: Black;
                     --CellOutlineColor: lightblue;
+                    --CellHighlightBackColor: #d3d3d3;
 
                 }
             
