Continued work on Scrollbars

--- a/index.html
+++ b/index.html
@@ -42,6 +42,15 @@
                     --CellOutlineColor: lightblue;
                     --CellHighlightBackColor: #d3d3d3;
 
+                    --OutlineOn: True;
+                    --OutlineColor: Black;
+
+                    --SliderForeColor: black;
+                    --SliderBackColor: lightgrey;
+                    --SliderThickness: 15;
+                    
+
+
                 }
             
         </style>
