Some Scrollbar changes and constraints added

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     --OutlineColor: Black;
 
                     --SliderForeColor: black;
-                    --SliderBackColor: lightgrey;
+                    --SliderBackColor: yellow;
                     --SliderThickness: 15;
                     
 
