--- a/index.html
+++ b/index.html
@@ -136,6 +136,11 @@
     onclick="DG.PopulateFromJSONUrl('https://my-json-server.typicode.com/Harlock123/JSONData/db');" 
     id="btn9" value="Fetch Data From URL">
 
+    <input type="button" 
+    onclick="DG.PopulateFromJSONUrl('http://localhost:8000/CaseManagerQueue.json');
+             DG.SetTitle('My Case Managers Queue');" 
+    id="btn10" value="Case Managers">
+
     <br>
     MouseClick Event Data:_____________________MouseHover Event Data<br>
     <textarea id="MOUSECLICKAREA" rows=6 cols=40></textarea>
