--- a/index.html
+++ b/index.html
@@ -141,10 +141,17 @@
              DG.SetTitle('My Case Managers Queue');" 
     id="btn10" value="Case Managers">
 
+
+    <!-- Button Below will not work outside of Anthem Network -->
+
+    <!-- 
+
     <input type="button" 
     onclick="DG.PopulateFromJSONUrl('https://asca.sit.va.anthem.com/ascaweb/api/IntegrateContribution/GetCMInbox/asca~ad62805');
              DG.SetTitle('Big Assed Query');" 
     id="btn11" value="Big Assed Query">
+
+    -->
 
     <br>
     MouseClick Event Data:_____________________MouseHover Event Data<br>
