Extended Metadata fornClicked and Hovered events

--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
                 var v = "Cell Clicked \n" + 
                     DG.CELLCLICKEDINFO.CELLCLICKED + "\n ON ROW " + 
                     DG.CELLCLICKEDINFO.ROWCLICKED + "\n ON COL " + 
-                    DG.CELLCLICKEDINFO.COLCLICKED;
+                    DG.CELLCLICKEDINFO.COLCLICKED + "\n LABELED " +
+                    DG.CELLCLICKEDINFO.COLNAME;
                 
                     var el = document.getElementById('MOUSECLICKAREA');
 
@@ -87,7 +88,8 @@
                 var v = "Cell Hovered \n" + 
                     DG.CELLCLICKEDINFO.CELLCLICKED + "\n ON ROW " + 
                     DG.CELLCLICKEDINFO.ROWCLICKED + "\n ON COL " + 
-                    DG.CELLCLICKEDINFO.COLCLICKED;
+                    DG.CELLCLICKEDINFO.COLCLICKED + "\n LABELED " +
+                    DG.CELLCLICKEDINFO.COLNAME;
                 
                     var el = document.getElementById('MOUSEHOVERAREA');
 
