Minor formatting change to INDEX

--- a/index.html
+++ b/index.html
@@ -105,7 +105,11 @@
     value="Set Header">
 
     <input type="button" 
-    onclick="var result = new Array(); var iresult = new Array(); for(var i=0;i<8;i++){ iresult.push('Data_' + i + '\nLine 2')}; for(var i=0;i<10;i++){result.push(iresult)}; DG.SetGridRowsJSON(JSON.stringify(result));" id="btn2" value="Set Some Data">
+    onclick="var result = new Array(); var iresult = new Array(); 
+        for(var i=0;i<8;i++){ iresult.push('Data_' + i + '\nLine 2')}; 
+        for(var i=0;i<10;i++){result.push(iresult)}; 
+        DG.SetGridRowsJSON(JSON.stringify(result));" 
+        id="btn2" value="Set Some Data">
 
 
     <input type="button" 
