Cut one at Making Image Column Types primarily for use in my OPUS project

--- a/index.html
+++ b/index.html
@@ -195,6 +195,23 @@
              DG.SetTitle('Big Assed Query');" 
     id="btn11" value="Big Assed Query">
 
+    <input type="button" 
+    onclick="DG.SetImageColumn(1);
+             " 
+    id="btn12" value="Image Col 1">
+
+    <input type="button" 
+    onclick="DG.ClearImageColumn(1);
+             " 
+    id="btn13" value="No Image Col 1">
+
+    <input type="button" 
+    onclick="DG.ClearAllImageColumns();
+             " 
+    id="btn14" value="Clear Images">
+
+
+   
     <br>
     MouseClick Event Data:_____________________MouseHover Event Data ___________________ DOUBLECLICK<br>
     <textarea aria-label="Clicked Status" id="MOUSECLICKAREA" rows=6 cols=40></textarea>
